# ceng-core

./: .gitignore  CMakeLists.txt  README.md  TODO.md  ceng-core.sln  ceng-core.vcxproj
ceng-glsl/: FullySpecifiedType.cpp  declaration.cpp  glsl-parser.cpp  init-decl-list.cpp  initializer.cpp  keyword_db.cpp  keyword_db.h  single-declaration.cpp  token-info.h  token.cpp  tokenizer.cpp  type-qualifier.cpp  type-spec-no-arr.cpp  type-spec-no-prec.cpp  type-specifier.cpp
ceng-glsl/docs/: grammar_rules.txt  grammar_tree.txt
ceng-glsl/src/: AST_AssignmentOperation.cpp  AST_BinaryOperation.cpp  AST_Break.cpp  AST_CaseLabel.cpp  AST_ConditionalOperation.cpp  AST_Datatype.cpp  AST_DefaultPrecision.cpp  AST_Expression.cpp  AST_FragCoordLayout.cpp  AST_FragmentShaderOut.cpp  AST_FunctionCall.cpp  AST_FunctionPrototype.cpp  AST_Generator.cpp  AST_Generator.h  AST_GeometryShaderIn.cpp  AST_GeometryShaderOut.cpp  AST_IfBlock.cpp  AST_IncDecOperation.cpp  AST_InvariantStatement.cpp  AST_NodeType.cpp  AST_NormalVariable.cpp  AST_Return.cpp  AST_ReturnStatement.cpp  (+211 more)
ceng-win32/: CMakeLists.txt
ceng-win32/inc/: cpu-x86.h  gl32-adapter.h  gl32-blend-state.h  gl32-buffer-bits.h  gl32-constants.h  gl32-cubemap.h  gl32-depth-stencil-state.h  gl32-index-buffer.h  gl32-pixel-shader.h  gl32-render-target-view.h  gl32-sampler-state.h  gl32-shader-const.h  gl32-shader-program.h  gl32-shader-resource-view.h  gl32-state-change.h  gl32-state-vertex-stream.h  gl32-target-slot.h  gl32-target-tex2d.h  gl32-texture-2d.h  gl32-texture-unit.h  gl32-uniform-empty.h  gl32-uniform-float.h  gl32-uniform-float2.h  gl32-uniform-float3.h  gl32-uniform-float4.h  gl32-uniform-mat4.h  gl32-uniform-sampler2d.h  gl32-vertex-buffer.h  gl32-vertex-shader.h  gl32-view-cubemap.h  gl32-view-tex2d.h  gl33-context.h  gl33-device.h  gl33-swap-chain.h  gl33-vertex-format.h  win32-crend-d3d9.h  win32-d3d9.h  win32-dll.h  win32-mouse.h  win32-opengl32.h  (+1 more)
ceng-win32/src/: cpu-x86.cpp  d3d9-adapter.cpp  d3d9-swap-chain.cpp  gl32-adapter.cpp  gl32-blend-state.cpp  gl32-buffer-bits.cpp  gl32-cubemap.cpp  gl32-depth-stencil-state.cpp  gl32-index-buffer.cpp  gl32-pixel-shader.cpp  gl32-sampler-state.cpp  gl32-shader-const.cpp  gl32-shader-program.cpp  gl32-target-slot.cpp  gl32-target-tex2d.cpp  gl32-texture-2d.cpp  gl32-texture-unit.cpp  gl32-uniform-empty.cpp  gl32-uniform-float.cpp  gl32-uniform-float2.cpp  gl32-uniform-float3.cpp  gl32-uniform-float4.cpp  gl32-uniform-mat4.cpp  gl32-uniform-sampler2d.cpp  gl32-vertex-buffer.cpp  gl32-vertex-shader.cpp  gl32-view-cubemap.cpp  gl32-view-tex2d.cpp  gl33-context.cpp  gl33-device.cpp  gl33-swap-chain.cpp  gl33-vertex-format.cpp  graphics-2d-d3d10.cpp  graphics-2d-d3d9.cpp  graphics-system.cpp  layer-win32.cpp  path.cpp  win32-cond-var.cpp  win32-crend-d3d10.cpp  win32-crend-d3d9.cpp  (+10 more)
glsl_parser_test/: main.cpp
inc/: ceng.h
liblog/: CMakeLists.txt
sw_renderer/: BucketQueue.h  BucketStage.h  README.md  SimpleStage.h  TODO.md  api-command.h  buffer-clear.cpp  buffer-factory.cpp  clipper.cpp  clipper.h  cmd-clear-target.cpp  cr-depthstencil-state.cpp  cr-depthstencil-state.h  cr-pixel-shader.cpp  cr-pixel-shader.h  cr-rendertargetview.cpp  cr-rendertargetview.h  cr-resource.cpp  cr-resource.h  cr-scene.cpp  cr-setup.cpp  cr-shader-const.cpp  cr-shader-const.h  cr-shader-program.cpp  cr-shader-program.h  cr-shader-view-tex2d.cpp  cr-swap-chain.cpp  cr-swap-chain.h  cr-target-tex2d.cpp  cr-target-tex2d.h  cr-texture-2d.cpp  cr-texture-2d.h  cr-uniform-mat4.cpp  cr-uniform-mat4.h  cr-uniform-uint.cpp  cr-uniform-uint.h  cr-vertex-buffer.cpp  cr-vertex-buffer.h  cr-vertex-shader.cpp  cr-vertex-shader.h  (+41 more)
timerlib/: CMakeLists.txt
vstudio_solution/: ceng_core.sln  vstudio_solution.sln
(+155 files in other folders)
